syntax = "proto3";

package miiverse.v2;

import "miiverse/v2/smm_request_post_id_rpc.proto";
import "miiverse/v2/packet.proto";

service MiiverseService {
  rpc SMMRequestPostId(SMMRequestPostIdRequest) returns (SMMRequestPostIdResponse) {}
  rpc SendPacket(Packet) returns (PacketResponse) {}
}
